# app_project

./: README
doc/: history.txt
doc/classReference/: appClassReference.txt  utilitiesClassReference.txt
doc/classReference/html/: appclass.html  homepage.html  publicclass.html
doc/classReference/html/css/: homepage.css
doc/interface/low_level_maker/: demand.conf  maker.py
doc/interface/low_level_maker/css/: interface.css
source/app/doc/: history.txt
source/app/lib/: .ipc_interface.cpp.swp  .ipc_interface.h.swp  CMakeLists.txt  ipc_interface.cpp  ipc_interface.h  logger.cpp  logger.h  logger_ctrl.cpp  logger_ctrl.h  singleton.h  source_info.cpp  source_info.h
source/app/src/: CMakeLists.txt  main.cpp
source/app/src/appsrc/: app_logctrl.cpp  app_logctrl.h  app_logs.h
source/app/utest/: .utest.cpp.swp  .utest_main.cpp.swp  CMakeLists.txt  utest.cpp  utest_app_logctrl.cpp  utest_logger.cpp  utest_main.cpp  utest_source_info.cpp
source/strategy_matrix/strategy_mode/strategy_mode_a/src/: CMakeLists.txt  strategy_mode_a.cpp  strategy_mode_a.h
source/strategy_matrix/strategy_mode/strategy_mode_a/utest/: CMakeLists.txt  utest.cpp  utest_main.cpp
