INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/appsrc)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MAIN_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/appsrc APP_SRC)
#SET(APP_SRC main.c)
ADD_EXECUTABLE(app ${APP_SRC} ${MAIN_SRC})
TARGET_LINK_LIBRARIES(app app_utilities)
INSTALL(TARGETS app RUNTIME DESTINATION ${CROSS_ARCHITECTURE}/bin)
