INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../gtest_src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/appsrc)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/appsrc APP_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} UTEST_SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/../gtest_src/gtest GTEST_SRC)
ADD_EXECUTABLE(utest ${UTEST_SRC} ${GTEST_SRC} ${APP_SRC})
TARGET_LINK_LIBRARIES(utest app_utilities pthread)
INSTALL(TARGETS utest RUNTIME DESTINATION ${CROSS_ARCHITECTURE}/utest)
