INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../../app/lib/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../../../build/app_build/binary/${CROSS_ARCHITECTURE}/lib)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} STRATEGY_SRC)
ADD_LIBRARY(strategy_mode_a SHARED ${STRATEGY_SRC})
TARGET_LINK_LIBRARIES(strategy_mode_a ipc_interface)
MESSAGE(STATUS ${CROSS_ARCHITECTURE})
INSTALL(TARGETS strategy_mode_a DESTINATION ${CROSS_ARCHITECTURE}/lib)
