INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../../../source/gtest_src/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} UTEST_SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/../../../../source/gtest_src/gtest GTEST_SRC)
ADD_EXECUTABLE(utest ${UTEST_SRC} ${GTEST_SRC} ${TEST_CODE})
ADD_LIBRARY(ipc_interface SHARED IMPORTED)
SET_TARGET_PROPERTIES(ipc_interface PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/../../../../build/app_build/binary/${CROSS_ARCHITECTURE}/lib/libipc_interface.so)
TARGET_LINK_LIBRARIES(utest ipc_interface pthread strategy_mode_a)
INSTALL(TARGETS utest RUNTIME DESTINATION ${CROSS_ARCHITECTURE}/utest)
